--- a/chrome-extention/popup.html
+++ b/chrome-extention/popup.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>YouTube Sentiment Analyzer</title>
-    <link rel="stylesheet" href="popup.css">
+<meta charset="UTF-8">
+<title>YouTube Sentiment</title>
+<link rel="stylesheet" href="popup.css">
+<script src="libs/chart.min.js"></script>
+<script src="popup.js"></script>
 </head>
 <body>
-    <h1>YouTube Sentiment</h1>
+<h1>YouTube Sentiment Analyzer</h1>
 
-    <input type="text" id="apiUrl" placeholder="API URL" value="http://127.0.0.1:8000">
-    <button id="analyzeBtn">Analyze Comments</button>
-    <div id="loading" style="display:none">Loading...</div>
-    <div id="error" style="display:none;color:red;"></div>
+<input type="text" id="apiUrl" placeholder="API URL" value="http://127.0.0.1:8000">
+<button id="analyzeBtn">Analyze Comments</button>
+<button id="darkModeBtn">Toggle Dark Mode</button>
 
-    <div id="filters">
-        <button class="filter-btn active" data-filter="all">All</button>
-        <button class="filter-btn" data-filter="1">Positive</button>
-        <button class="filter-btn" data-filter="0">Neutral</button>
-        <button class="filter-btn" data-filter="-1">Negative</button>
-    </div>
+<div id="loading" style="display:none">Loading...</div>
+<div id="error" style="display:none;color:red;"></div>
 
-    <div id="results" style="display:none">
-        <div id="stats">
-            Positive: <span id="positiveCount">0</span> (<span id="positivePercent">0%</span>)<br>
-            Neutral: <span id="neutralCount">0</span> (<span id="neutralPercent">0%</span>)<br>
-            Negative: <span id="negativeCount">0</span> (<span id="negativePercent">0%</span>)
-        </div>
-        <div id="commentsList"></div>
-    </div>
+<div id="filters">
+    <button class="filter-btn active" data-filter="all">All</button>
+    <button class="filter-btn" data-filter="1">Positive</button>
+    <button class="filter-btn" data-filter="0">Neutral</button>
+    <button class="filter-btn" data-filter="-1">Negative</button>
+</div>
 
-    <script src="popup.js"></script>
+<div id="results" style="display:none">
+    <canvas id="statsChart" height="150"></canvas> <!-- Graphique -->
+    <div id="commentsList"></div>
+</div>
+
+<script src="popup.js"></script>
 </body>
 </html>
